--- a/data generation/Json2CSV.ipynb
+++ b/data generation/Json2CSV.ipynb
@@ -41,7 +41,7 @@
     "    with open('train_data.csv', 'w', newline='') as train_file:   \n",
     "        train_writer = csv.writer(train_file, delimiter=',', quotechar='|', quoting=csv.QUOTE_MINIMAL)\n",
     "        for d in data:\n",
-    "            [P1x, P1y,P2x,P2y] = data[d][0]['bbox_obj']\n",
+    "            [P1x, P1y,w,h] = data[d][0]['bbox_obj']\n",
     "            if int(d) in idx['ape']:\n",
     "                train_writer.writerow([img_path + \"{:06d}\".format(int(d)) + '.png', P1x, P1y, P2x, P2y, 'ape'])\n",
     "            else:\n",
