--- a/Train network on Colab.ipynb
+++ b/Train network on Colab.ipynb
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1149,30 +1149,185 @@
      "user_tz": -120
     },
     "id": "z3Uq1tapM53y",
-    "outputId": "596dc44e-e975-483b-d764-6c66b092ba78"
+    "outputId": "596dc44e-e975-483b-d764-6c66b092ba78",
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "Loading model, this may take a second..."
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-07-14 13:25:21.699680: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'cudart64_101.dll'; dlerror: cudart64_101.dll not found\n",
+      "2020-07-14 13:25:21.700073: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2020-07-14 13:25:25.139736: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'nvcuda.dll'; dlerror: nvcuda.dll not found\n",
+      "2020-07-14 13:25:25.140096: E tensorflow/stream_executor/cuda/cuda_driver.cc:351] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2020-07-14 13:25:25.144791: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:169] retrieving CUDA diagnostic information for host: DESKTOP-GPUASTH\n",
+      "2020-07-14 13:25:25.145290: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:176] hostname: DESKTOP-GPUASTH\n",
+      "2020-07-14 13:25:25.145798: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2\n",
+      "Using TensorFlow backend.\n",
+      "\n",
+      "Running network: N/A% (0 of 5) |         | Elapsed Time: 0:00:00 ETA:  --:--:--Traceback (most recent call last):\n",
+      "  File \"keras_retinanet/bin/evaluate.py\", line 159, in <module>\n",
+      "    main()\n",
+      "  File \"keras_retinanet/bin/evaluate.py\", line 136, in main\n",
+      "    save_path=args.save_path\n",
+      "  File \"keras_retinanet/bin\\..\\..\\keras_retinanet\\utils\\eval.py\", line 174, in evaluate\n",
+      "    all_detections, all_inferences = _get_detections(generator, model, score_threshold=score_threshold, max_detections=max_detections, save_path=save_path)\n",
+      "  File \"keras_retinanet/bin\\..\\..\\keras_retinanet\\utils\\eval.py\", line 109, in _get_detections\n",
+      "    draw_annotations(raw_image, generator.load_annotations(i), label_to_name=generator.label_to_name)\n",
+      "  File \"keras_retinanet/bin\\..\\..\\keras_retinanet\\utils\\visualization.py\", line 115, in draw_annotations\n",
+      "    draw_box(image, annotations['bboxes'][i], color=c)\n",
+      "  File \"keras_retinanet/bin\\..\\..\\keras_retinanet\\utils\\visualization.py\", line 35, in draw_box\n",
+      "    cv2.rectangle(image, pt1=(b[0], b[1]), pt2=(b[2], b[3]), color=color, thickness=2, lineType=cv2.LINE_AA)\n",
+      "TypeError: rectangle() missing required argument 'rec' (pos 2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "tracking <tf.Variable 'Variable:0' shape=(9, 4) dtype=float32, numpy=\n",
+      "array([[-22.627417, -11.313708,  22.627417,  11.313708],\n",
+      "       [-28.50876 , -14.25438 ,  28.50876 ,  14.25438 ],\n",
+      "       [-35.918785, -17.959393,  35.918785,  17.959393],\n",
+      "       [-16.      , -16.      ,  16.      ,  16.      ],\n",
+      "       [-20.158737, -20.158737,  20.158737,  20.158737],\n",
+      "       [-25.398417, -25.398417,  25.398417,  25.398417],\n",
+      "       [-11.313708, -22.627417,  11.313708,  22.627417],\n",
+      "       [-14.25438 , -28.50876 ,  14.25438 ,  28.50876 ],\n",
+      "       [-17.959393, -35.918785,  17.959393,  35.918785]], dtype=float32)> anchors\n",
+      "tracking <tf.Variable 'Variable:0' shape=(9, 4) dtype=float32, numpy=\n",
+      "array([[-45.254833, -22.627417,  45.254833,  22.627417],\n",
+      "       [-57.01752 , -28.50876 ,  57.01752 ,  28.50876 ],\n",
+      "       [-71.83757 , -35.918785,  71.83757 ,  35.918785],\n",
+      "       [-32.      , -32.      ,  32.      ,  32.      ],\n",
+      "       [-40.317474, -40.317474,  40.317474,  40.317474],\n",
+      "       [-50.796833, -50.796833,  50.796833,  50.796833],\n",
+      "       [-22.627417, -45.254833,  22.627417,  45.254833],\n",
+      "       [-28.50876 , -57.01752 ,  28.50876 ,  57.01752 ],\n",
+      "       [-35.918785, -71.83757 ,  35.918785,  71.83757 ]], dtype=float32)> anchors\n",
+      "tracking <tf.Variable 'Variable:0' shape=(9, 4) dtype=float32, numpy=\n",
+      "array([[ -90.50967 ,  -45.254833,   90.50967 ,   45.254833],\n",
+      "       [-114.03504 ,  -57.01752 ,  114.03504 ,   57.01752 ],\n",
+      "       [-143.67514 ,  -71.83757 ,  143.67514 ,   71.83757 ],\n",
+      "       [ -64.      ,  -64.      ,   64.      ,   64.      ],\n",
+      "       [ -80.63495 ,  -80.63495 ,   80.63495 ,   80.63495 ],\n",
+      "       [-101.593666, -101.593666,  101.593666,  101.593666],\n",
+      "       [ -45.254833,  -90.50967 ,   45.254833,   90.50967 ],\n",
+      "       [ -57.01752 , -114.03504 ,   57.01752 ,  114.03504 ],\n",
+      "       [ -71.83757 , -143.67514 ,   71.83757 ,  143.67514 ]],\n",
+      "      dtype=float32)> anchors\n",
+      "tracking <tf.Variable 'Variable:0' shape=(9, 4) dtype=float32, numpy=\n",
+      "array([[-181.01933,  -90.50967,  181.01933,   90.50967],\n",
+      "       [-228.07008, -114.03504,  228.07008,  114.03504],\n",
+      "       [-287.35028, -143.67514,  287.35028,  143.67514],\n",
+      "       [-128.     , -128.     ,  128.     ,  128.     ],\n",
+      "       [-161.2699 , -161.2699 ,  161.2699 ,  161.2699 ],\n",
+      "       [-203.18733, -203.18733,  203.18733,  203.18733],\n",
+      "       [ -90.50967, -181.01933,   90.50967,  181.01933],\n",
+      "       [-114.03504, -228.07008,  114.03504,  228.07008],\n",
+      "       [-143.67514, -287.35028,  143.67514,  287.35028]], dtype=float32)> anchors\n",
+      "tracking <tf.Variable 'Variable:0' shape=(9, 4) dtype=float32, numpy=\n",
+      "array([[-362.03867, -181.01933,  362.03867,  181.01933],\n",
+      "       [-456.14017, -228.07008,  456.14017,  228.07008],\n",
+      "       [-574.70056, -287.35028,  574.70056,  287.35028],\n",
+      "       [-256.     , -256.     ,  256.     ,  256.     ],\n",
+      "       [-322.5398 , -322.5398 ,  322.5398 ,  322.5398 ],\n",
+      "       [-406.37466, -406.37466,  406.37466,  406.37466],\n",
+      "       [-181.01933, -362.03867,  181.01933,  362.03867],\n",
+      "       [-228.07008, -456.14017,  228.07008,  456.14017],\n",
+      "       [-287.35028, -574.70056,  287.35028,  574.70056]], dtype=float32)> anchors\n",
+      "4.2.0\n"
      ]
     }
    ],
    "source": [
-    "!python \"keras_retinanet/bin/evaluate.py\" --convert-model --save-path \"Results\"  csv \"data generation/val_data.csv\" \\\n",
+    "!python \"keras_retinanet/bin/evaluate.py\" --convert-model --save-path \"Results\"  csv \"data generation/val_data_red.csv\" \\\n",
     " \"data generation/classes.csv\" \"snapshots/resnet50_csv_20.h5\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "NRXeAnexa3xP"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "print(cv2.__version__)\n",
+    "image = cv2.imread('LINEMOD/000001/rgb/000001.png')\n",
+    "box = [71, 30, 240, 80]\n",
+    "b = np.array(box).astype(int)\n",
+    "draw_box(image, b, color=(0,0,255))\n",
+    "cv2.imwrite('test.png',image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_box(image, box, color, thickness=2):\n",
+    "    \"\"\" Draws a box on an image with a given color.\n",
+    "\n",
+    "    # Arguments\n",
+    "        image     : The image to draw on.\n",
+    "        box       : A list of 4 elements (x1, y1, x2, y2).\n",
+    "        color     : The color of the box.\n",
+    "        thickness : The thickness of the lines to draw a box with.\n",
+    "    \"\"\"\n",
+    "    b = np.array(box).astype(int)\n",
+    "    cv2.rectangle(image, (b[0], b[1]), (b[2], b[3]), color, thickness, cv2.LINE_AA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"keras_retinanet/bin/drawTest.py\", line 6, in <module>\n",
+      "    sys.path.insert(0, os.path.join(os.path.dirname(__file__), '..', '..'))\n",
+      "NameError: name 'sys' is not defined\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python \"keras_retinanet/bin/drawTest.py\" >> log.log"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
