Changed train network notebook

--- a/Train_network_on_Colab.ipynb
+++ b/Train_network_on_Colab.ipynb
@@ -60,13 +60,13 @@
     "!pip install keras-resnet==0.1.0\n",
     "!pip install git+https://github.com/cocodataset/cocoapi.git#subdirectory=PythonAPI\n",
     "!pip install h5py\n",
-    "!pip install keras\n",
+    "!pip install keras==2.3.1\n",
     "!pip install matplotlib\n",
     "!pip install numpy>=1.14\n",
     "!pip install opencv-python>=3.3.0\n",
     "!pip install pillow\n",
     "!pip install progressbar2\n",
-    "!pip install tensorflow\n",
+    "!pip install tensorflow==2.2.0\n",
     "\n",
     "!python setup.py build_ext --inplace\n",
     "\n",
