--- a/Train_network_on_Colab.ipynb
+++ b/Train_network_on_Colab.ipynb
@@ -53,7 +53,8 @@
     "# Navigate to RotinaNet-6D folder, switch branch\n",
     "%cd 'RotinaNet-6D'\n",
     "!git checkout separate_rot_trans\n",
-    "#!git checkout combined_transformation_submodelw\n",
+    "#!git checkout combined_transformation_submodel\n",
+    "#!git checkout calc_translation\n",
     "\n",
     "# Install requirements \n",
     "!pip install cython\n",
@@ -176,8 +177,8 @@
     }
    ],
    "source": [
-    "!python keras_retinanet/bin/train.py --steps 79 --epochs 2 --batch-size 2 --weights \"../resnet50_coco_best_v2.1.0.h5\" --tensorboard-dir {log} \\\n",
-    "--no-evaluation --compute-val-loss \\\n",
+    "!python keras_retinanet/bin/train.py --steps 79 --epochs 30 --batch-size 2 --weights \"../resnet50_coco_best_v2.1.0.h5\" --tensorboard-dir {log} \\\n",
+    "--compute-val-loss \\\n",
     "csv \"data generation/train_data_ape.csv\" \"data generation/classes.csv\" \\\n",
     "--val-annotations \"data generation/rnd_val_data_ape.csv\""
    ]
@@ -344,70 +345,9 @@
     }
    ],
    "source": [
-    "!python \"keras_retinanet/bin/evaluate.py\" --convert-model --save-path \"Results\"  csv \"data generation/rnd_val_data_ape.csv\" \\\n",
-    " \"data generation/classes.csv\" \"snapshots/resnet50_csv_02.h5\""
+    "!python \"keras_retinanet/bin/evaluate.py\" --convert-model --save-path \"Results\"  csv \"data generation/val_data_ape.csv\" \\\n",
+    " \"data generation/classes.csv\" \"snapshots/resnet50_csv_30.h5\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 204
-    },
-    "colab_type": "code",
-    "id": "oqbmd3Q4tRsR",
-    "outputId": "5e5f3092-1396-4bb2-9c29-3d82c4b8b1cb"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "remote: Enumerating objects: 9, done.\u001b[K\n",
-      "remote: Counting objects:  11% (1/9)\u001b[K\r",
-      "remote: Counting objects:  22% (2/9)\u001b[K\r",
-      "remote: Counting objects:  33% (3/9)\u001b[K\r",
-      "remote: Counting objects:  44% (4/9)\u001b[K\r",
-      "remote: Counting objects:  55% (5/9)\u001b[K\r",
-      "remote: Counting objects:  66% (6/9)\u001b[K\r",
-      "remote: Counting objects:  77% (7/9)\u001b[K\r",
-      "remote: Counting objects:  88% (8/9)\u001b[K\r",
-      "remote: Counting objects: 100% (9/9)\u001b[K\r",
-      "remote: Counting objects: 100% (9/9), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1)\u001b[K\r",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 5 (delta 4), reused 5 (delta 4), pack-reused 0\u001b[K\n",
-      "Unpacking objects:  20% (1/5)   \r",
-      "Unpacking objects:  40% (2/5)   \r",
-      "Unpacking objects:  60% (3/5)   \r",
-      "Unpacking objects:  80% (4/5)   \r",
-      "Unpacking objects: 100% (5/5)   \r",
-      "Unpacking objects: 100% (5/5), done.\n",
-      "From https://github.com/JakobGroeftehauge/RotinaNet-6D\n",
-      "   d399ffe..a3875d1  master     -> origin/master\n",
-      "Updating d399ffe..a3875d1\n",
-      "Fast-forward\n",
-      " keras_retinanet/bin/evaluate.py | 2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " 1 file changed, 1 insertion(+), 1 deletion(-)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!git pull"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "uiIUASP8Vkq7"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
